updated package.json & yarn with more stable dependencies

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-amplify": "^0.2.x",
+    "aws-amplify": "^0.2.0",
     "react": "16.2.0",
     "react-native": "0.52.1",
     "react-navigation": "^1.0.0-beta.27",
