--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,9 @@ buck-out/
 */fastlane/screenshots
 
 #awsmobilejs
+aws-info.json
+project-info.json
+aws-exports.js
 awsmobilejs/.awsmobile/backend-build
 awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
