--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-amplify": "^0.2.0",
+    "aws-amplify": "^0.2.11",
+    "aws-amplify-react-native": "^0.2.7",
     "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.52.1",
